# MTCombMask

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
msvc/: MTCombMask.sln  MTCombMask.vcxproj  MTCombMask.vcxproj.filters
src/: MTCombMask.cpp  MTCombMask.h  MTCombMask.rc  MTCombMask_AVX2.cpp  MTCombMask_AVX512.cpp  MTCombMask_SSE2.cpp
src/VCL2/: vectori128.h  vectori256.h  vectori512s.h
